<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_bottom_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.MainActivityFragment"
        tools:showIn="@layout/activity_main"
        android:id="@+id/rlStressLevel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question1"
            android:id="@+id/txtQuestion1"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq1"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question2"
            android:id="@+id/txtQuestion2"
            android:layout_below="@+id/sbq1"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq2"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question3"
            android:id="@+id/txtQuestion3"
            android:layout_below="@+id/sbq2"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq3"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question4"
            android:id="@+id/txtQuestion4"
            android:layout_below="@+id/sbq3"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq4"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question5"
            android:id="@+id/txtQuestion5"
            android:layout_below="@+id/sbq4"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq5"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question6"
            android:id="@+id/txtQuestion6"
            android:layout_below="@+id/sbq5"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq6"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question7"
            android:id="@+id/txtQuestion7"
            android:layout_below="@+id/sbq6"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq7"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question8"
            android:id="@+id/txtQuestion8"
            android:layout_below="@+id/sbq7"
            android:layout_alignParentStart="true" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/sbq8"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="top"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtQuestion8" />

    </RelativeLayout>
</ScrollView>